# tracing-opentelemetry

./: .gitignore  Cargo.toml  README.md
examples/: report.rs  span_extension.rs
examples/tonic/: Cargo.toml
examples/tonic/src/: client.rs  server.rs
opentelemetry/: Cargo.toml
opentelemetry/examples/: basic.rs
opentelemetry/src/: core.rs  global.rs  jaeger.rs  lib.rs
opentelemetry/src/api/: mod.rs
opentelemetry/src/api/metrics/: counter.rs  gauge.rs  measure.rs  mod.rs  noop.rs  value.rs
opentelemetry/src/api/trace/: mod.rs  noop.rs  noop_span.rs  noop_tracer.rs  provider.rs  span.rs  span_context.rs  span_registry.rs  tracer.rs
opentelemetry/src/sdk/: mod.rs
opentelemetry/src/sdk/tracing/: mod.rs  span.rs  span_registry.rs
src/: layer.rs  lib.rs  span_ext.rs  subscriber.rs
