[package]
name = "tracing-opentelemetry"
version = "0.2.0"
authors = ["Julian Tescher <julian@tescher.me>"]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/jtescher/tracing-opentelemetry"
repository = "https://github.com/jtescher/tracing-opentelemetry"
readme = "README.md"
categories = ["development-tools::debugging"]
keywords = ["tracing", "opentelemetry", "jaeger", "prometheus"]
license = "MIT"
edition = "2018"

[dependencies]
opentelemetry = "0.2.0"
rand = "0.7.3"
tracing-core = "0.1.9"
tracing-subscriber = "0.2.0"

[dev-dependencies]
opentelemetry-jaeger = "0.1.0"
thrift = "0.13.0"
tracing = "0.1.12"
tracing-attributes = "0.1.6"
