[package]
name = "tracing-opentelemetry"
version = "0.2.0"
authors = ["Julian Tescher <julian@tescher.me>"]
description = "OpenTelemetry integration for tracing"
homepage = "https://github.com/jtescher/tracing-opentelemetry"
repository = "https://github.com/jtescher/tracing-opentelemetry"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["tracing", "opentelemetry", "jaeger", "zipkin", "prometheus", "async"]
license = "MIT"
edition = "2018"

[dependencies]
opentelemetry = "0.4.0"
rand = "0.7.3"
tracing = "0.1.13"
tracing-core = "0.1.10"
tracing-subscriber = "0.2.3"

[dev-dependencies]
opentelemetry-jaeger = "0.3.0"
thrift = "0.13.0"
tracing-attributes = "0.1.7"

[workspace]
members = ["examples/tonic"]
